<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brew Day Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hydro_adjust">Hydrometer Adjust</string>
    <string name="title_activity_hydrometer_adjust">HydrometerAdjustActivity</string>
    <string name="title_activity_refractometer_adjust">Refractometer Adjustment</string>
    <string name="refract_adjust">Refractometer Adjust</string>
    <string name="brix">Brix</string>
    <string name="calculate">Calculate</string>
    <string name="target_og">Target Gravity</string>
    <string name="preboil_amt">Preboil Amount</string>
    <string name="postboil_amt">Postboil Amount</string>
    <string name="gravity_hint">e.g. 1.050</string>

</resources>
