<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:layout_margin="10dp">
	    
	    <TextView
	        android:id="@+id/textview1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:text="@string/target_og" />

	    <EditText
	        android:id="@+id/og_val"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="2"
	        android:layout_margin="10dp"
   	        android:hint="@string/gravity_hint"
	        android:inputType="numberDecimal" />
		    
    </LinearLayout>
<!--     
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:onClick="hydroAdjust"
        android:text="@string/hydro_adjust" />
 -->
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:onClick="refractAdjust"
        android:text="@string/refract_adjust" />
    
</LinearLayout>