<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RefractometerAdjustActivity" >

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:layout_margin="10dp">

	    <TextView
	        android:id="@+id/preboil_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:textSize="18sp"
	        android:text="@string/preboil_amt" />
	        
	    <EditText
	        android:id="@+id/preboil_val"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="2"
	        android:inputType="numberDecimal" >
	
	    </EditText>

	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:layout_margin="10dp">

	    <TextView
	        android:id="@+id/postboil_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:textSize="18sp"
	        android:text="@string/postboil_amt" />
	        
	    <EditText
	        android:id="@+id/postboil_val"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="2"
	        android:inputType="numberDecimal" >
	
	    </EditText>

	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:layout_margin="10dp">

	    <TextView
	        android:id="@+id/brix_textview"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:textSize="18sp"
	        android:text="@string/brix" />
	        
	    <EditText
	        android:id="@+id/brix_val"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="2"
	        android:inputType="numberDecimal" >
	
	    </EditText>

	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_margin="10dp">

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/calculate"
	        android:onClick="calcSpecificGravity" />

    </LinearLayout>

      <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 
      android:orientation="horizontal"
      android:layout_margin="10dp">
	    
          <TextView 
              android:id="@+id/results"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
          />
  
        
        </LinearLayout>
        
</LinearLayout>
